--- a/src/styles.css
+++ b/src/styles.css
@@ -1,3 +1,93 @@
 :root{
-    color:#3d00c2;
+    --siderbar:#F7F7F7;
+    --text-color:grey;
+    --color:#082E92;
+}
+
+html,body{
+    font-family: "Roboto", serif;
+    font-weight: 500;
+    font-style: normal;
+
+    padding: 0;
+    margin: 0;
+    width: 100%;
+    height: 100%;
+}
+
+.wrapper{
+    width: 100%;
+    height: 100%;
+
+    display: grid;
+    grid-template-columns: 250px 1fr;
+    grid-template-rows: 70px 6fr;
+}
+
+.header{
+    padding-left: 30px;
+    color: rgb(255, 255, 255);
+    background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(7,6,99,1) 0%, rgba(7,6,97,1) 25%, rgba(9,9,121,1) 35%, rgba(0,212,255,1) 100%);
+    grid-row: 1/2;
+    grid-column: 1/4;
+
+    font-size: 30px;
+    display: flex;
+    align-items: center;
+}
+
+
+.sidebar{
+    padding: 20px;
+    padding-top: 40px;
+    gap:20px;
+    background-color:var(--siderbar);
+    border: 1px solid black;
+    width: 100%;
+    height: 100%;
+    grid-row: 2/3;
+    grid-column: 1/2;
+    display: flex;
+    flex-direction: column;
+}
+
+.buttonTask{
+    display: flex;
+    align-items: center;
+    color: gray;
+    background-color: white;
+    box-sizing: border-box;
+    border-radius: 7px;
+    height: 40px;
+    padding-left: 20px;
+    border: 0px solid black;
+    text-align: left;
+    font-size: 20px;
+}
+
+.buttonTask:hover{
+    border: 2px solid var(--color);
+
+}
+
+.content{
+    width: 100%;
+    height: 100%;
+    
+    display: flex;
+    flex-direction: column;
+}
+
+.titleSVG{
+    
+    padding-right: 10px;
+    padding-bottom: 4px;
+    width: 40px;
+    height: 40px;
+}
+svg{
+    padding-right: 10px;
+    padding-bottom: 4px;
+    width: 20px;
+    height: 20px;
 }
