--- a/src/styles.css
+++ b/src/styles.css
@@ -1,6 +1,6 @@
 :root{
     --siderbar:#F7F7F7;
-    --text-color:grey;
+    --text-color:rgb(0, 0, 0);
     --color:#082E92;
 }
 
@@ -13,6 +13,7 @@ html,body{
     margin: 0;
     width: 100%;
     height: 100%;
+    overflow: hidden;
 }
 
 .wrapper{
@@ -20,7 +21,7 @@ html,body{
     height: 100%;
 
     display: grid;
-    grid-template-columns: 250px 1fr;
+    grid-template-columns: 300px 1fr;
     grid-template-rows: 70px 6fr;
 }
 
@@ -36,58 +37,3 @@ html,body{
     align-items: center;
 }
 
-
-.sidebar{
-    padding: 20px;
-    padding-top: 40px;
-    gap:20px;
-    background-color:var(--siderbar);
-    border: 1px solid black;
-    width: 100%;
-    height: 100%;
-    grid-row: 2/3;
-    grid-column: 1/2;
-    display: flex;
-    flex-direction: column;
-}
-
-.buttonTask{
-    display: flex;
-    align-items: center;
-    color: gray;
-    background-color: white;
-    box-sizing: border-box;
-    border-radius: 7px;
-    height: 40px;
-    padding-left: 20px;
-    border: 0px solid black;
-    text-align: left;
-    font-size: 20px;
-}
-
-.buttonTask:hover{
-    border: 2px solid var(--color);
-
-}
-
-.content{
-    width: 100%;
-    height: 100%;
-    
-    display: flex;
-    flex-direction: column;
-}
-
-.titleSVG{
-    
-    padding-right: 10px;
-    padding-bottom: 4px;
-    width: 40px;
-    height: 40px;
-}
-svg{
-    padding-right: 10px;
-    padding-bottom: 4px;
-    width: 20px;
-    height: 20px;
-}
