--- a/src/dialog.css
+++ b/src/dialog.css
@@ -35,7 +35,7 @@ form{
     width: 100%;
     display: flex;
 }
-.formTitle{
+.projectFormTitle{
     color: white;
     font-size: 30px;
 }
@@ -85,7 +85,7 @@ input{
     margin-right: 20px;
 }
 
-.submitForm{
+.submitProjectForm{
     color: white;
     border-radius: 5px;
     font-size: 15px;
