--- a/src/css/dialog.css
+++ b/src/css/dialog.css
@@ -16,8 +16,7 @@ form{
     position: fixed;
     background-color: #F7F7F7;
     width: 400px;
-    height: 300px;
-
+    height: fit-content;
     display: flex;
     flex-direction: column;
 }
@@ -55,7 +54,7 @@ form{
     margin-bottom: 10px;
 }
 input{
-    height: 50px;
+    height: 35px;
     margin-left: 30px;
     margin-right: 30px;
     margin-bottom: 20px;
@@ -85,7 +84,7 @@ input{
     margin-right: 20px;
 }
 
-.submitProjectForm{
+.submitProjectForm,.editProjectForm,.submitTaskForm{
     color: white;
     border-radius: 5px;
     font-size: 15px;
