--- a/src/css/content.css
+++ b/src/css/content.css
@@ -26,10 +26,21 @@
     margin-right: 10px;
 }
 .taskDiv{
+    height: 20px;
     padding: 20px;
     margin-left: 15px;
     padding-right: 0;
     display: flex;
     align-items: center;
     border-bottom: 1px rgb(197, 197, 197) solid;
+}
+.priority{
+    margin-left: auto;
+}
+.description{
+    margin-left: auto;
+    margin-right: 30px;
+    overflow: hidden;
+    width: 100px;
+    height: 100%;
 }
